--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
-  <head></head>
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/disable-devtool-auto" disable-devtool-auto="true" clear-log="true" disable-select="true" disable-copy="true" disable-cut="true" disable-paste="true"></script>
+    <script src="prodevs.js"></script>
+    <script src="aes.js"></script>
+    <script src="main.js"></script> <!-- Your main JavaScript file -->
+  </head>
   <body>
-    <h1> YE link yaha mat use kar lavdu</h1>
+    <script type="text/javascript">
+      window.location = "https://dhruvpatil1215.github.io/World_wide4/";
+    </script>
   </body>
 </html>
 #EXTINF:-1 tvg-id="" tvg-name="IN | Sport: Sony Six HD" tvg-logo="" group-title="INDIA",IN | Sport: Sony Six HD
