--- a/index.html
+++ b/index.html
@@ -11,11 +11,5 @@
     </script>
   </body>
 </html>
-#EXTINF:-1 tvg-id="" tvg-name="IN | Sport: Sony Six HD" tvg-logo="" group-title="INDIA",IN | Sport: Sony Six HD
-http://v111.co:80/live/2925/2925/251582.ts
-#EXTINF:-1 tvg-id="" tvg-name="IN | Sport: Sony Ten 1 HD" tvg-logo="" group-title="INDIA",IN | Sport: Sony Ten 1 HD
-http://v111.co:80/live/2925/2925/251583.ts
-#EXTINF:-1 tvg-id="" tvg-name="IN | Sport: Sony Ten 2 HD" tvg-logo="" group-title="INDIA",IN | Sport: Sony Ten 2 HD
-http://v111.co:80/live/2925/2925/251584.ts
-#EXTINF:-1 tvg-id="" tvg-name="IN | Sport: Sony Ten 3 HD" tvg-logo="" group-title="INDIA",IN | Sport: Sony Ten 3 HD
-http://v111.co:80/live/2925/2925/251585.ts
+#EXTINF:-1 tvg-id="https://static.wikia.nocookie.net/logopedia/images/8/8e/%26tv.svg/revision/latest?cb=20240418091947" tvg-name="IN: &TV HD" tvg-logo="" group-title="INDIA",IN: &TV HD
+http://v111.co:80/live/2925/2925/251614.ts
