--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
   </body>
 </html>
-#EXTINF:-1 tvg-id="https://static.wikia.nocookie.net/logopedia/images/8/8e/%26tv.svg/revision/latest?cb=20240418091947" tvg-name="IN: &TV HD" tvg-logo="" group-title="INDIA",IN: &TV HD
+#EXTINF:-1 tvg-id="https://static.wikia.nocookie.net/logopedia/images/8/8e/%26tv.svg/revision/latest?cb=20240418091947" tvg-name="IN: &TV HD" tvg-logo="" group-title="Hindi",IN: &TV HD
 http://v111.co:80/live/2925/2925/251614.ts
-#EXTINF:-1 tvg-id="ANDPICTURESHD.in" tvg-name="IN | TS &PICTURES FHD" tvg-logo="https://rolextv.asia:443/images/55981cce50bb0a1fea9d312413b80046.png" group-title="IN | MOVIES",IN | TS &PICTURES FHD
+#EXTINF:-1 tvg-id="ANDPICTURESHD.in" tvg-name="IN | TS &PICTURES FHD" tvg-logo="https://rolextv.asia:443/images/55981cce50bb0a1fea9d312413b80046.png" group-title="Hindi",IN | TS &PICTURES FHD
 https://rolextv.asia:443/53378/53378/27143
