--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     </script>
   </body>
 </html>
-#EXTINF:-1 tvg-id="https://static.wikia.nocookie.net/logopedia/images/8/8e/%26tv.svg/revision/latest?cb=20240418091947" tvg-name="IN: &TV HD" tvg-logo="" group-title="Hindi",IN: &TV HD
+#EXTINF:-1 tvg-id="https://static.wikia.nocookie.net/logopedia/images/8/8e/%26tv.svg/revision/latest?cb=20240418091947" tvg-name="IN: &TV HD" tvg-logo="" group-title="Hindi Serial",&TV HD
 http://v111.co:80/live/2925/2925/251614.ts
-#EXTINF:-1 tvg-id="ANDPICTURESHD.in" tvg-name="IN | TS &PICTURES FHD" tvg-logo="https://rolextv.asia:443/images/55981cce50bb0a1fea9d312413b80046.png" group-title="Hindi",IN | TS &PICTURES FHD
+#EXTINF:-1 tvg-id="ANDPICTURESHD.in" tvg-name="IN | TS &PICTURES FHD" tvg-logo="https://rolextv.asia:443/images/55981cce50bb0a1fea9d312413b80046.png" group-title="Hindi ",IN | &PICTURES FHD
 https://rolextv.asia:443/53378/53378/27143
+#EXTINF:-1 tvg-id="Aaj Tak" tvg-name="IN | D2H ZEE CINEMA 4K" tvg-logo="https://rolextv.asia:443/images/499cb6b27642307867f1088993e7fd90.png" group-title="Hindi| MOVIES",IN |  ZEE CINEMA 4K
+https://rolextv.asia:443/53378/53378/27139
