--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
 http://v111.co:80/live/2925/2925/251614.ts
 #EXTINF:-1 tvg-id="ANDPICTURESHD.in" tvg-name="IN | TS &PICTURES FHD" tvg-logo="https://rolextv.asia:443/images/55981cce50bb0a1fea9d312413b80046.png" group-title="Hindi ",IN | &PICTURES FHD
 https://rolextv.asia:443/53378/53378/27143
-#EXTINF:-1 tvg-id="Aaj Tak" tvg-name="IN | D2H ZEE CINEMA 4K" tvg-logo="https://rolextv.asia:443/images/499cb6b27642307867f1088993e7fd90.png" group-title="Hindi| MOVIES",IN |  ZEE CINEMA 4K
+#EXTINF:-1 tvg-id="Aaj Tak" tvg-name="IN | D2H ZEE CINEMA 4K" tvg-logo="https://rolextv.asia:443/images/499cb6b27642307867f1088993e7fd90.png" group-title="Hindi",IN |  ZEE CINEMA 4K
 https://rolextv.asia:443/53378/53378/27139
+#EXTINF:-1 tvg-id="Aaj Tak" tvg-name="IN | D2H ZEE TV FHD" tvg-logo="https://rolextv.asia:443/images/HjUNyHDk1GXCeTnp_TSKC7q2jWglfYHqyUdbeeJDv0dH8Q72PZCLEkLQjdgUSBBy.jpg" group-title="Hindi Serial",IN | D2H ZEE TV FHD
+https://rolextv.asia:443/53378/53378/62210
+#EXTINF:-1 tvg-id="" tvg-name="IN: ZEE NEWS HD" tvg-logo="https://rolextv.asia:443/images/75f5dae90921ae24f6ce5e0604cd3579.png" group-title="INDIAN NEWS",IN: ZEE NEWS HD
+https://rolextv.asia:443/53378/53378/25872
+#EXTINF:-1 tvg-id="" tvg-name="UK: B4U MUSIC" tvg-logo="https://raw.githubusercontent.com/tv-logo/tv-logos/main/countries/united-kingdom/b4u-music-uk.png" group-title="UK | ASIAN",UK: B4U MUSIC
+https://rolextv.asia:443/53378/53378/148302
+
+
