--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@ https://rolextv.asia:443/53378/53378/27139
 https://rolextv.asia:443/53378/53378/62210
 #EXTINF:-1 tvg-id="" tvg-name="IN: ZEE NEWS HD" tvg-logo="https://rolextv.asia:443/images/75f5dae90921ae24f6ce5e0604cd3579.png" group-title="INDIAN NEWS",IN: ZEE NEWS HD
 https://rolextv.asia:443/53378/53378/25872
-#EXTINF:-1 tvg-id="" tvg-name="UK: B4U MUSIC" tvg-logo="https://raw.githubusercontent.com/tv-logo/tv-logos/main/countries/united-kingdom/b4u-music-uk.png" group-title="UK | ASIAN",UK: B4U MUSIC
+#EXTINF:-1 tvg-id="" tvg-name="UK: B4U MUSIC" tvg-logo="https://raw.githubusercontent.com/tv-logo/tv-logos/main/countries/united-kingdom/b4u-music-uk.png" group-title="Music | Music",UK: B4U MUSIC
 https://rolextv.asia:443/53378/53378/148302
+#EXTINF:-1 tvg-id="" tvg-name="IN-MAR | STAR PRAVAH HD" tvg-logo="" group-title="MARATHI",IN-MAR | STAR PRAVAH HD
+http://xsmarters.top:8080/7251892/2587435/383034
+#EXTINF:-1 tvg-id="" tvg-name="IN-MAR | ZEE MARATHI HD" tvg-logo="" group-title="MARATHI",IN-MAR | ZEE MARATHI HD
+http://xsmarters.top:8080/7251892/2587435/383033
 
 
