--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@ https://rolextv.asia:443/53378/53378/148302
 http://xsmarters.top:8080/7251892/2587435/383034
 #EXTINF:-1 tvg-id="" tvg-name="IN-MAR | ZEE MARATHI HD" tvg-logo="" group-title="MARATHI",IN-MAR | ZEE MARATHI HD
 http://xsmarters.top:8080/7251892/2587435/383033
-
+#EXTINF:-1 tvg-id="" tvg-name="IN: Zee Talkies FHD" tvg-logo="" group-title="MARATHI",IN: Zee Talkies FHD
+http://v111.co:80/live/2925/2925/251529.ts
+#EXTINF:-1 tvg-id="" tvg-name="IN: SONY MARATHI" tvg-logo="" group-title="MARATHI",IN: SONY MARATHI
+http://v111.co:80/live/2925/2925/251314.ts
 
