--- a/index.html
+++ b/index.html
@@ -31,4 +31,6 @@ http://xsmarters.top:8080/7251892/2587435/383033
 http://v111.co:80/live/2925/2925/251529.ts
 #EXTINF:-1 tvg-id="" tvg-name="IN: SONY MARATHI" tvg-logo="" group-title="MARATHI",IN: SONY MARATHI
 http://v111.co:80/live/2925/2925/251314.ts
+#EXTINF:-1 tvg-id="" tvg-name="IND: Star Gold UK" tvg-logo="" group-title="Hindi",IND: Star Gold UK
+http://xsmarters.top:8080/7251892/2587435/382224
 
