--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ http://xsmarters.top:8080/7251892/2587435/383033
 http://v111.co:80/live/2925/2925/251529.ts
 #EXTINF:-1 tvg-id="" tvg-name="IN: SONY MARATHI" tvg-logo="" group-title="MARATHI",IN: SONY MARATHI
 http://v111.co:80/live/2925/2925/251314.ts
-#EXTINF:-1 tvg-id="" tvg-name="IND: Star Gold UK" tvg-logo="" group-title="Hindi",IND: Star Gold UK
-http://xsmarters.top:8080/7251892/2587435/382224
-
+#EXTINF:-1 tvg-id="" tvg-name="IN: Zee BollyWood+" tvg-logo="" group-title="INDIA",IN: Zee BollyWood+
+http://v111.co:80/live/2925/2925/251545.ts
+#EXTINF:-1 tvg-id="" tvg-name="IN: Star Gold HD+" tvg-logo="" group-title="Hindi",IN: Star Gold HD+
+http://v111.co:80/live/2925/2925/251546.ts
+#EXTINF:-1 tvg-id="stargoldhd.in" tvg-name="Star GOLD (4K)" tvg-logo="http://logo.opplextv.com/logo/4Klogo.png" group-title="Hindi",Star GOLD (4K)
+http://xsmarters.top:8080/7251892/2587435/109959
