--- a/index.html
+++ b/index.html
@@ -37,3 +37,9 @@ http://v111.co:80/live/2925/2925/251545.ts
 http://v111.co:80/live/2925/2925/251546.ts
 #EXTINF:-1 tvg-id="stargoldhd.in" tvg-name="Star GOLD (4K)" tvg-logo="http://logo.opplextv.com/logo/4Klogo.png" group-title="Hindi",Star GOLD (4K)
 http://xsmarters.top:8080/7251892/2587435/109959
+#EXTINF:-1 tvg-id="" tvg-name="IN: Sports 18 (4K)" tvg-logo="https://upload.wikimedia.org/wikipedia/en/d/d3/Sports18_logo.svg" group-title="CRICKET",IN: Sports 18 (4K)
+http://xsmarters.top:8080/7251892/2587435/382205
+#EXTINF:-1 tvg-id="" tvg-name="IND: India TV" tvg-logo="" group-title="INDIA NEWS",IND: India TV
+http://xsmarters.top:8080/7251892/2587435/345353
+
+
