--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+i<html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/disable-devtool-auto" disable-devtool-auto="true" clear-log="true" disable-select="true" disable-copy="true" disable-cut="true" disable-paste="true"></script>
     <script src="prodevs.js"></script>
@@ -19,7 +19,7 @@ https://rolextv.asia:443/53378/53378/27143
 https://rolextv.asia:443/53378/53378/27139
 #EXTINF:-1 tvg-id="Aaj Tak" tvg-name="IN | D2H ZEE TV FHD" tvg-logo="https://rolextv.asia:443/images/HjUNyHDk1GXCeTnp_TSKC7q2jWglfYHqyUdbeeJDv0dH8Q72PZCLEkLQjdgUSBBy.jpg" group-title="Hindi Serial",IN | D2H ZEE TV FHD
 https://rolextv.asia:443/53378/53378/62210
-#EXTINF:-1 tvg-id="" tvg-name="IN: ZEE NEWS HD" tvg-logo="https://rolextv.asia:443/images/75f5dae90921ae24f6ce5e0604cd3579.png" group-title="INDIAN NEWS",IN: ZEE NEWS HD
+#EXTINF:-1 tvg-id="" tvg-name="IN: ZEE NEWS HD" tvg-logo="https://rolextv.asia:443/images/75f5dae90921ae24f6ce5e0604cd3579.png" group-title="NEWS",IN: ZEE NEWS HD
 https://rolextv.asia:443/53378/53378/25872
 #EXTINF:-1 tvg-id="" tvg-name="UK: B4U MUSIC" tvg-logo="https://raw.githubusercontent.com/tv-logo/tv-logos/main/countries/united-kingdom/b4u-music-uk.png" group-title="Music | Music",UK: B4U MUSIC
 https://rolextv.asia:443/53378/53378/148302
@@ -39,7 +39,7 @@ http://v111.co:80/live/2925/2925/251546.ts
 http://xsmarters.top:8080/7251892/2587435/109959
 #EXTINF:-1 tvg-id="" tvg-name="IN: Sports 18 (4K)" tvg-logo="https://upload.wikimedia.org/wikipedia/en/d/d3/Sports18_logo.svg" group-title="CRICKET",IN: Sports 18 (4K)
 http://xsmarters.top:8080/7251892/2587435/382205
-#EXTINF:-1 tvg-id="" tvg-name="IND: India TV" tvg-logo="" group-title="INDIA NEWS",IND: India TV
+#EXTINF:-1 tvg-id="" tvg-name="IND: India TV" tvg-logo="" group-title="NEWS",IND: India TV
 http://xsmarters.top:8080/7251892/2587435/345353
 
 
