--- a/index.html
+++ b/index.html
@@ -41,5 +41,13 @@ http://xsmarters.top:8080/7251892/2587435/109959
 http://xsmarters.top:8080/7251892/2587435/382205
 #EXTINF:-1 tvg-id="" tvg-name="IND: India TV" tvg-logo="" group-title="NEWS",IND: India TV
 http://xsmarters.top:8080/7251892/2587435/345353
+#EXTINF:-1 tvg-id="STARSPORTSHINDIHD.in" tvg-name="IN | D2H STAR SPORTS 1 FHD HINDI" tvg-logo="https://rolextv.asia:443/images/79GH9ntwlFJ-1AEI0T1Eua7pIKS6T9qxJHBrHjZzbtaeXQAweji0KMcDiLh-JYtK.jpg" group-title="CRICKET",IN | D2H STAR SPORTS 1 FHD HINDI
+https://rolextv.asia:443/53378/53378/76721
+#EXTINF:-1 tvg-id="SONIC.IN" tvg-name="IN | D2H SONIC HINDI" tvg-logo="https://rolextv.asia:443/images/HjUNyHDk1GXCeTnp_TSKC-53wSDON4kVxalhwvqUW4sp0WigiXW2IDtz31mRp9pu.jpg" group-title="KIDS",IN | D2H SONIC HINDI
+https://rolextv.asia:443/53378/53378/62179
+#EXTINF:-1 tvg-id="" tvg-name="IN | D2H SONY YAY" tvg-logo="https://rolextv.asia:443/images/HjUNyHDk1GXCeTnp_TSKC7GK91aa3i0Veo4MouTpio5J3wsBTCF-t__qRzkzeVmm.jpg" group-title="KIDS",IN | D2H SONY YAY
+https://rolextv.asia:443/53378/53378/62180
+
+
 
 
